--- a/Jestimate.ipynb
+++ b/Jestimate.ipynb
@@ -29,11 +29,11 @@
       "metadata": {
         "id": "9oXi5disofZQ",
         "colab_type": "code",
+        "outputId": "a67bb474-6a84-4fff-a51c-2e3a7ad94f54",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 204
-        },
-        "outputId": "c5007a9b-d857-4162-fd59-60d97b81e6b2"
+          "height": 414
+        }
       },
       "source": [
         "import pandas as pd\n",
@@ -44,12 +44,270 @@
         "from bokeh.plotting import curdoc\n",
         "\n",
         "initial_data = pd.read_csv('https://raw.githubusercontent.com/JimKing100/SF_Real_Estate_Live/master/data/SF-SFR-Sales-Final1.csv')\n",
-        "data = initial_data.loc[:,['full_address']]\n",
+        "initial_data.head()"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>longitude</th>\n",
+              "      <th>latitude</th>\n",
+              "      <th>full_address</th>\n",
+              "      <th>city</th>\n",
+              "      <th>state</th>\n",
+              "      <th>street_no</th>\n",
+              "      <th>street_name</th>\n",
+              "      <th>street_nox</th>\n",
+              "      <th>street_suffix</th>\n",
+              "      <th>zip</th>\n",
+              "      <th>area</th>\n",
+              "      <th>district_no</th>\n",
+              "      <th>district_desc</th>\n",
+              "      <th>subdist_no</th>\n",
+              "      <th>subdist_desc</th>\n",
+              "      <th>on_market_data</th>\n",
+              "      <th>cdom</th>\n",
+              "      <th>orig_list_price</th>\n",
+              "      <th>sale_date</th>\n",
+              "      <th>sale_price</th>\n",
+              "      <th>rooms</th>\n",
+              "      <th>baths</th>\n",
+              "      <th>beds</th>\n",
+              "      <th>sf_source</th>\n",
+              "      <th>sf_source_decs</th>\n",
+              "      <th>sf</th>\n",
+              "      <th>lot_acres</th>\n",
+              "      <th>lot_sf</th>\n",
+              "      <th>year_built</th>\n",
+              "      <th>zoning</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>-122.466620</td>\n",
+              "      <td>37.753273</td>\n",
+              "      <td>1878 10th Ave, San Francisco, CA 94122-4602</td>\n",
+              "      <td>San Francisco</td>\n",
+              "      <td>CA</td>\n",
+              "      <td>1878</td>\n",
+              "      <td>10th</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>Ave</td>\n",
+              "      <td>94122</td>\n",
+              "      <td>2060</td>\n",
+              "      <td>2</td>\n",
+              "      <td>SF District 2</td>\n",
+              "      <td>2060</td>\n",
+              "      <td>2 - Inner Sunset</td>\n",
+              "      <td>8/31/11</td>\n",
+              "      <td>65</td>\n",
+              "      <td>649000</td>\n",
+              "      <td>12/22/11</td>\n",
+              "      <td>580000</td>\n",
+              "      <td>6</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>2</td>\n",
+              "      <td>T</td>\n",
+              "      <td>Per Tax Records</td>\n",
+              "      <td>1480</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1932</td>\n",
+              "      <td>RH1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>-122.466670</td>\n",
+              "      <td>37.753850</td>\n",
+              "      <td>1842 10th Ave, San Francisco, CA 94122-4602</td>\n",
+              "      <td>San Francisco</td>\n",
+              "      <td>CA</td>\n",
+              "      <td>1842</td>\n",
+              "      <td>10th</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>Ave</td>\n",
+              "      <td>94122</td>\n",
+              "      <td>2060</td>\n",
+              "      <td>2</td>\n",
+              "      <td>SF District 2</td>\n",
+              "      <td>2060</td>\n",
+              "      <td>2 - Inner Sunset</td>\n",
+              "      <td>10/8/08</td>\n",
+              "      <td>164</td>\n",
+              "      <td>679000</td>\n",
+              "      <td>3/23/09</td>\n",
+              "      <td>509000</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>2</td>\n",
+              "      <td>T</td>\n",
+              "      <td>Per Tax Records</td>\n",
+              "      <td>920</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1908</td>\n",
+              "      <td>RH1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>-122.466700</td>\n",
+              "      <td>37.754070</td>\n",
+              "      <td>1829 10th Ave, San Francisco, CA 94122</td>\n",
+              "      <td>San Francisco</td>\n",
+              "      <td>CA</td>\n",
+              "      <td>1829</td>\n",
+              "      <td>10th</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>Ave</td>\n",
+              "      <td>94122</td>\n",
+              "      <td>2060</td>\n",
+              "      <td>2</td>\n",
+              "      <td>SF District 2</td>\n",
+              "      <td>2060</td>\n",
+              "      <td>2 - Inner Sunset</td>\n",
+              "      <td>9/6/13</td>\n",
+              "      <td>15</td>\n",
+              "      <td>699000</td>\n",
+              "      <td>10/11/13</td>\n",
+              "      <td>840000</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1.5</td>\n",
+              "      <td>2</td>\n",
+              "      <td>T</td>\n",
+              "      <td>Per Tax Records</td>\n",
+              "      <td>1200</td>\n",
+              "      <td>0.0693</td>\n",
+              "      <td>3017</td>\n",
+              "      <td>1906</td>\n",
+              "      <td>RH1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>-122.466965</td>\n",
+              "      <td>37.758057</td>\n",
+              "      <td>1612 10th Ave, San Francisco, CA 94122</td>\n",
+              "      <td>San Francisco</td>\n",
+              "      <td>CA</td>\n",
+              "      <td>1612</td>\n",
+              "      <td>10th</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>Ave</td>\n",
+              "      <td>94122</td>\n",
+              "      <td>2060</td>\n",
+              "      <td>2</td>\n",
+              "      <td>SF District 2</td>\n",
+              "      <td>2060</td>\n",
+              "      <td>2 - Inner Sunset</td>\n",
+              "      <td>6/8/10</td>\n",
+              "      <td>9</td>\n",
+              "      <td>699900</td>\n",
+              "      <td>7/29/10</td>\n",
+              "      <td>817000</td>\n",
+              "      <td>6</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>3</td>\n",
+              "      <td>T</td>\n",
+              "      <td>Per Tax Records</td>\n",
+              "      <td>1800</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1914</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>-122.466910</td>\n",
+              "      <td>37.757130</td>\n",
+              "      <td>1671 10th Ave, San Francisco, CA 94122</td>\n",
+              "      <td>San Francisco</td>\n",
+              "      <td>CA</td>\n",
+              "      <td>1671</td>\n",
+              "      <td>10th</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>Ave</td>\n",
+              "      <td>94122</td>\n",
+              "      <td>2060</td>\n",
+              "      <td>2</td>\n",
+              "      <td>SF District 2</td>\n",
+              "      <td>2060</td>\n",
+              "      <td>2 - Inner Sunset</td>\n",
+              "      <td>9/8/11</td>\n",
+              "      <td>25</td>\n",
+              "      <td>749000</td>\n",
+              "      <td>10/6/11</td>\n",
+              "      <td>785000</td>\n",
+              "      <td>5</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>2</td>\n",
+              "      <td>T</td>\n",
+              "      <td>Per Tax Records</td>\n",
+              "      <td>1050</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1938</td>\n",
+              "      <td>RH2</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "    longitude   latitude  ... year_built zoning\n",
+              "0 -122.466620  37.753273  ...       1932    RH1\n",
+              "1 -122.466670  37.753850  ...       1908    RH1\n",
+              "2 -122.466700  37.754070  ...       1906    RH1\n",
+              "3 -122.466965  37.758057  ...       1914    NaN\n",
+              "4 -122.466910  37.757130  ...       1938    RH2\n",
+              "\n",
+              "[5 rows x 30 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6dr0OyGtAMnz",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "outputId": "02501197-36cc-4070-9b63-a817332af3a8"
+      },
+      "source": [
+        "data = initial_data[['full_address', 'subdist_desc', 'longitude', 'latitude']]\n",
         "data = data.drop_duplicates()\n",
         "\n",
         "data.head()"
       ],
-      "execution_count": 16,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -74,46 +332,66 @@
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
               "      <th>full_address</th>\n",
+              "      <th>subdist_desc</th>\n",
+              "      <th>longitude</th>\n",
+              "      <th>latitude</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
               "      <td>1878 10th Ave, San Francisco, CA 94122-4602</td>\n",
+              "      <td>2 - Inner Sunset</td>\n",
+              "      <td>-122.466620</td>\n",
+              "      <td>37.753273</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>1842 10th Ave, San Francisco, CA 94122-4602</td>\n",
+              "      <td>2 - Inner Sunset</td>\n",
+              "      <td>-122.466670</td>\n",
+              "      <td>37.753850</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>1829 10th Ave, San Francisco, CA 94122</td>\n",
+              "      <td>2 - Inner Sunset</td>\n",
+              "      <td>-122.466700</td>\n",
+              "      <td>37.754070</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
               "      <td>1612 10th Ave, San Francisco, CA 94122</td>\n",
+              "      <td>2 - Inner Sunset</td>\n",
+              "      <td>-122.466965</td>\n",
+              "      <td>37.758057</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
               "      <td>1671 10th Ave, San Francisco, CA 94122</td>\n",
+              "      <td>2 - Inner Sunset</td>\n",
+              "      <td>-122.466910</td>\n",
+              "      <td>37.757130</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "                                  full_address\n",
-              "0  1878 10th Ave, San Francisco, CA 94122-4602\n",
-              "1  1842 10th Ave, San Francisco, CA 94122-4602\n",
-              "2       1829 10th Ave, San Francisco, CA 94122\n",
-              "3       1612 10th Ave, San Francisco, CA 94122\n",
-              "4       1671 10th Ave, San Francisco, CA 94122"
+              "                                  full_address  ...   latitude\n",
+              "0  1878 10th Ave, San Francisco, CA 94122-4602  ...  37.753273\n",
+              "1  1842 10th Ave, San Francisco, CA 94122-4602  ...  37.753850\n",
+              "2       1829 10th Ave, San Francisco, CA 94122  ...  37.754070\n",
+              "3       1612 10th Ave, San Francisco, CA 94122  ...  37.758057\n",
+              "4       1671 10th Ave, San Francisco, CA 94122  ...  37.757130\n",
+              "\n",
+              "[5 rows x 4 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 16
+          "execution_count": 12
         }
       ]
     },
