--- a/Main.ipynb
+++ b/Main.ipynb
@@ -33,7 +33,9 @@
       "source": [
         "# Import libraries\n",
         "import pandas as pd\n",
-        "import numpy as np"
+        "import numpy as np\n",
+        "\n",
+        "from datetime import datetime"
       ],
       "execution_count": 0,
       "outputs": []
@@ -47,7 +49,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 496
         },
-        "outputId": "3b30c303-b72e-46ba-f0f1-0675e35e2d2b"
+        "outputId": "6ce7cf0c-103d-4055-96c8-90645d0b2b2d"
       },
       "source": [
         "# Load SF real estate data - 10 years (2009-2018) of single family home sales in San Francisco downloaded from the SF MLS\n",
@@ -61,19 +63,19 @@
         "print(df.shape)\n",
         "df.head(5)"
       ],
-      "execution_count": 4,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "(23711, 40)\n"
+            "(23711, 39)\n"
           ],
           "name": "stdout"
         },
         {
           "output_type": "stream",
           "text": [
-            "/usr/local/lib/python3.6/dist-packages/IPython/core/interactiveshell.py:2718: DtypeWarning: Columns (10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+            "/usr/local/lib/python3.6/dist-packages/IPython/core/interactiveshell.py:2718: DtypeWarning: Columns (9) have mixed types. Specify dtype option on import or set low_memory=False.\n",
             "  interactivity=interactivity, compiler=compiler, result=result)\n"
           ],
           "name": "stderr"
@@ -108,7 +110,6 @@
               "      <th>state</th>\n",
               "      <th>street_no</th>\n",
               "      <th>street_name</th>\n",
-              "      <th>street_nox</th>\n",
               "      <th>street_suffix</th>\n",
               "      <th>zip</th>\n",
               "      <th>area</th>\n",
@@ -116,7 +117,7 @@
               "      <th>district_desc</th>\n",
               "      <th>subdist_no</th>\n",
               "      <th>neighborhood</th>\n",
-              "      <th>on_market_data</th>\n",
+              "      <th>on_market_date</th>\n",
               "      <th>cdom</th>\n",
               "      <th>orig_list_price</th>\n",
               "      <th>sale_date</th>\n",
@@ -154,17 +155,16 @@
               "      <td>2645</td>\n",
               "      <td>El Camino Del Mar</td>\n",
               "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
               "      <td>94121</td>\n",
               "      <td>1050</td>\n",
               "      <td>1</td>\n",
               "      <td>SF District 1</td>\n",
               "      <td>1050</td>\n",
               "      <td>1 - Outer Richmond</td>\n",
-              "      <td>41347</td>\n",
+              "      <td>03/14/13</td>\n",
               "      <td>4</td>\n",
               "      <td>1095000</td>\n",
-              "      <td>41355</td>\n",
+              "      <td>03/22/13</td>\n",
               "      <td>1260000</td>\n",
               "      <td>8</td>\n",
               "      <td>3.5</td>\n",
@@ -196,7 +196,6 @@
               "      <td>CA</td>\n",
               "      <td>1278</td>\n",
               "      <td>La Playa</td>\n",
-              "      <td>NaN</td>\n",
               "      <td>St</td>\n",
               "      <td>94122</td>\n",
               "      <td>2030</td>\n",
@@ -204,10 +203,10 @@
               "      <td>SF District 2</td>\n",
               "      <td>2030</td>\n",
               "      <td>2 - Outer Sunset</td>\n",
-              "      <td>42341</td>\n",
+              "      <td>12/03/15</td>\n",
               "      <td>144</td>\n",
               "      <td>1250000</td>\n",
-              "      <td>42485</td>\n",
+              "      <td>04/25/16</td>\n",
               "      <td>1075000</td>\n",
               "      <td>9</td>\n",
               "      <td>3.0</td>\n",
@@ -239,7 +238,6 @@
               "      <td>CA</td>\n",
               "      <td>1278</td>\n",
               "      <td>La Playa</td>\n",
-              "      <td>NaN</td>\n",
               "      <td>St</td>\n",
               "      <td>94122</td>\n",
               "      <td>2030</td>\n",
@@ -247,10 +245,10 @@
               "      <td>SF District 2</td>\n",
               "      <td>2030</td>\n",
               "      <td>2 - Outer Sunset</td>\n",
-              "      <td>42873</td>\n",
+              "      <td>05/18/17</td>\n",
               "      <td>36</td>\n",
               "      <td>1395000</td>\n",
-              "      <td>42964</td>\n",
+              "      <td>08/17/17</td>\n",
               "      <td>1525000</td>\n",
               "      <td>9</td>\n",
               "      <td>5.0</td>\n",
@@ -282,7 +280,6 @@
               "      <td>CA</td>\n",
               "      <td>590</td>\n",
               "      <td>48th</td>\n",
-              "      <td>NaN</td>\n",
               "      <td>Ave</td>\n",
               "      <td>94121</td>\n",
               "      <td>1050</td>\n",
@@ -290,10 +287,10 @@
               "      <td>SF District 1</td>\n",
               "      <td>1050</td>\n",
               "      <td>1 - Outer Richmond</td>\n",
-              "      <td>40356</td>\n",
+              "      <td>06/27/10</td>\n",
               "      <td>42</td>\n",
               "      <td>725000</td>\n",
-              "      <td>40410</td>\n",
+              "      <td>08/20/10</td>\n",
               "      <td>715000</td>\n",
               "      <td>5</td>\n",
               "      <td>1.0</td>\n",
@@ -325,7 +322,6 @@
               "      <td>CA</td>\n",
               "      <td>618</td>\n",
               "      <td>48th</td>\n",
-              "      <td>NaN</td>\n",
               "      <td>Ave</td>\n",
               "      <td>94121</td>\n",
               "      <td>1050</td>\n",
@@ -333,10 +329,10 @@
               "      <td>SF District 1</td>\n",
               "      <td>1050</td>\n",
               "      <td>1 - Outer Richmond</td>\n",
-              "      <td>41067</td>\n",
+              "      <td>06/07/12</td>\n",
               "      <td>24</td>\n",
               "      <td>1595000</td>\n",
-              "      <td>41103</td>\n",
+              "      <td>07/13/12</td>\n",
               "      <td>1595000</td>\n",
               "      <td>8</td>\n",
               "      <td>4.0</td>\n",
@@ -370,13 +366,13 @@
               "3 -122.50924  37.777330  ...  ATAC,2STR,FIXR       WATR,OCEN,PARK\n",
               "4 -122.50919  37.776695  ...            3STR  PNRM,CTYL,OCEN,PARK\n",
               "\n",
-              "[5 rows x 40 columns]"
+              "[5 rows x 39 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 28
         }
       ]
     },
@@ -387,15 +383,15 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 714
+          "height": 697
         },
-        "outputId": "00ac7480-2702-4db9-8359-4ebdf4ab37db"
+        "outputId": "f5a87b60-93c8-4d7a-ef8b-62e34b7b1cc8"
       },
       "source": [
         "# Check for nulls\n",
         "df.isnull().sum()"
       ],
-      "execution_count": 5,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -409,7 +405,6 @@
               "state                  0\n",
               "street_no              0\n",
               "street_name            0\n",
-              "street_nox         23460\n",
               "street_suffix       1613\n",
               "zip                    0\n",
               "area                   0\n",
@@ -417,7 +412,7 @@
               "district_desc          0\n",
               "subdist_no             0\n",
               "neighborhood           0\n",
-              "on_market_data         0\n",
+              "on_market_date         0\n",
               "cdom                   0\n",
               "orig_list_price        0\n",
               "sale_date              0\n",
@@ -447,7 +442,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 29
         }
       ]
     },
@@ -458,15 +453,15 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 714
+          "height": 697
         },
-        "outputId": "469a5691-fcb1-4d45-aac7-d65172436075"
+        "outputId": "dfbcd742-0e71-4d24-f7a9-957d5234f29f"
       },
       "source": [
         "# Check for zeros\n",
         "(df == 0).sum()"
       ],
-      "execution_count": 9,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -480,7 +475,6 @@
               "state                  0\n",
               "street_no              0\n",
               "street_name            0\n",
-              "street_nox             0\n",
               "street_suffix          0\n",
               "zip                    0\n",
               "area                   0\n",
@@ -488,7 +482,7 @@
               "district_desc          0\n",
               "subdist_no             0\n",
               "neighborhood           0\n",
-              "on_market_data         0\n",
+              "on_market_date         0\n",
               "cdom                 806\n",
               "orig_list_price        0\n",
               "sale_date              0\n",
@@ -518,7 +512,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 30
         }
       ]
     },
@@ -531,13 +525,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "22568d28-84b2-49f4-e671-427819f60f80"
+        "outputId": "7afc0d68-0d75-4785-e6c0-d32ec87b023f"
       },
       "source": [
         "# Baseline of sale_price\n",
         "df['sale_price'].mean()"
       ],
-      "execution_count": 11,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -549,7 +543,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 31
         }
       ]
     },
@@ -558,20 +552,33 @@
       "metadata": {
         "id": "Yn0GPWPFJNKj",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "c36dcf52-d533-4b07-b391-4560e3eaba46"
       },
       "source": [
-        "# Train, test split on date of 10/1/2018\n",
-        "df['game_date'] = pd.to_datetime(df['game_date'], infer_datetime_format=True)\n",
-        "cutoff = pd.to_datetime('2018-10-01')\n",
-        "train = df[df['game_date'] < cutoff]\n",
-        "test  = df[df['game_date'] >= cutoff]\n",
+        "# Train, test split on date of 01/01/2018\n",
+        "df['sale_date'] = pd.to_datetime(df['sale_date'], infer_datetime_format=True)\n",
+        "cutoff = pd.to_datetime('2018-01-01')\n",
+        "train = df[df['sale_date'] < cutoff]\n",
+        "test  = df[df['sale_date'] >= cutoff]\n",
         "\n",
         "print(train.shape)\n",
         "print(test.shape)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(21487, 39)\n",
+            "(2224, 39)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
