--- a/Main.ipynb
+++ b/Main.ipynb
@@ -50,7 +50,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 496
         },
-        "outputId": "f139df1e-5825-41e1-ac71-33e2829ce048"
+        "outputId": "098aa0db-d2b1-4d8e-c39c-a99537698b94"
       },
       "source": [
         "# Load SF real estate data - 10 years (2009-2018) of single family home sales in San Francisco downloaded from the SF MLS\n",
@@ -64,7 +64,7 @@
         "print(df.shape)\n",
         "df.head(5)"
       ],
-      "execution_count": 326,
+      "execution_count": 335,
       "outputs": [
         {
           "output_type": "stream",
@@ -373,7 +373,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 326
+          "execution_count": 335
         }
       ]
     },
@@ -386,13 +386,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 697
         },
-        "outputId": "e34e54d9-d67b-4c5d-97df-9d3574aa129e"
+        "outputId": "7aa81544-6f1d-4847-c46e-c38b1b98fc86"
       },
       "source": [
         "# Check for nulls\n",
         "df.isnull().sum()"
       ],
-      "execution_count": 327,
+      "execution_count": 336,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -443,7 +443,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 327
+          "execution_count": 336
         }
       ]
     },
@@ -456,13 +456,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 751
         },
-        "outputId": "4f71e454-bd77-42f2-b7f0-7972ba22db38"
+        "outputId": "7fa58184-8c5a-42a6-90b1-9d95ee69e29d"
       },
       "source": [
         "# Check for zeros\n",
         "(df == '0').sum()"
       ],
-      "execution_count": 328,
+      "execution_count": 337,
       "outputs": [
         {
           "output_type": "stream",
@@ -521,7 +521,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 328
+          "execution_count": 337
         }
       ]
     },
@@ -534,13 +534,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "51c8631a-45ad-46a1-8179-205506a982aa"
+        "outputId": "df552ce4-e4a3-431c-90e0-522531e3ae95"
       },
       "source": [
         "# Baseline of sale_price\n",
         "df['sale_price'].mean()"
       ],
-      "execution_count": 329,
+      "execution_count": 338,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -552,7 +552,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 329
+          "execution_count": 338
         }
       ]
     },
@@ -565,7 +565,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 51
         },
-        "outputId": "add01114-edad-4d04-e799-7032d007eb8a"
+        "outputId": "9016086c-cc0d-4b92-98d1-651f6aeb864d"
       },
       "source": [
         "# Train, test split on date of 01/01/2018\n",
@@ -586,7 +586,7 @@
         "print(train.shape)\n",
         "print(test.shape)"
       ],
-      "execution_count": 330,
+      "execution_count": 339,
       "outputs": [
         {
           "output_type": "stream",
@@ -607,7 +607,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 904
         },
-        "outputId": "d043fa4c-43bf-4e7b-ab6c-dc02c2967418"
+        "outputId": "93c98cd8-2b8f-436a-e2d4-f4bbd8a2b0e5"
       },
       "source": [
         "# Wrangle the data for train and test\n",
@@ -694,6 +694,9 @@
         "                      'shopping', 'transportation', 'type', 'views']\n",
         "  for col in cols_with_czeros:\n",
         "    X[col] = X[col].replace('0', np.nan)\n",
+        "    \n",
+        "  # Engineer a price_sf column\n",
+        "  X['price_sf'] = X['sale_price'] / X['sf']\n",
         "  \n",
         "  # Drop date columns as they were converted to day, month, year columns\n",
         "  X = X.drop(columns='sale_date')\n",
@@ -706,7 +709,7 @@
         "\n",
         "train.head()"
       ],
-      "execution_count": 331,
+      "execution_count": 340,
       "outputs": [
         {
           "output_type": "stream",
@@ -806,6 +809,7 @@
               "      <th>year_on_market</th>\n",
               "      <th>month_on_market</th>\n",
               "      <th>day_on_market</th>\n",
+              "      <th>price_sf</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -854,6 +858,7 @@
               "      <td>2013</td>\n",
               "      <td>3</td>\n",
               "      <td>14</td>\n",
+              "      <td>468.227425</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
@@ -900,6 +905,7 @@
               "      <td>2015</td>\n",
               "      <td>12</td>\n",
               "      <td>3</td>\n",
+              "      <td>441.116126</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
@@ -946,6 +952,7 @@
               "      <td>2017</td>\n",
               "      <td>5</td>\n",
               "      <td>18</td>\n",
+              "      <td>587.216018</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
@@ -992,6 +999,7 @@
               "      <td>2010</td>\n",
               "      <td>6</td>\n",
               "      <td>27</td>\n",
+              "      <td>544.969512</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
@@ -1038,26 +1046,27 @@
               "      <td>2012</td>\n",
               "      <td>6</td>\n",
               "      <td>7</td>\n",
+              "      <td>482.310251</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "   longitude   latitude  ...  month_on_market day_on_market\n",
-              "0 -122.50965  37.780280  ...                3            14\n",
-              "1 -122.50929  37.762608  ...               12             3\n",
-              "2 -122.50929  37.762608  ...                5            18\n",
-              "3 -122.50924  37.777330  ...                6            27\n",
-              "4 -122.50919  37.776695  ...                6             7\n",
+              "   longitude   latitude  elevation  ... month_on_market day_on_market    price_sf\n",
+              "0 -122.50965  37.780280     200.83  ...               3            14  468.227425\n",
+              "1 -122.50929  37.762608      23.21  ...              12             3  441.116126\n",
+              "2 -122.50929  37.762608      23.21  ...               5            18  587.216018\n",
+              "3 -122.50924  37.777330     189.11  ...               6            27  544.969512\n",
+              "4 -122.50919  37.776695     175.89  ...               6             7  482.310251\n",
               "\n",
-              "[5 rows x 43 columns]"
+              "[5 rows x 44 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 331
+          "execution_count": 340
         }
       ]
     }
