--- a/Main.ipynb
+++ b/Main.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "Untitled28.ipynb",
       "provenance": [],
+      "machine_shape": "hm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,6 +27,41 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "G0Cju-oGCWpy",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 224
+        },
+        "outputId": "d3d7755f-c712-4d0a-8fd9-360e4e847013"
+      },
+      "source": [
+        "!pip install category_encoders==2.0.0"
+      ],
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: category_encoders==2.0.0 in /usr/local/lib/python3.6/dist-packages (2.0.0)\n",
+            "Requirement already satisfied: scipy>=0.19.0 in /usr/local/lib/python3.6/dist-packages (from category_encoders==2.0.0) (1.3.1)\n",
+            "Requirement already satisfied: scikit-learn>=0.20.0 in /usr/local/lib/python3.6/dist-packages (from category_encoders==2.0.0) (0.21.3)\n",
+            "Requirement already satisfied: patsy>=0.4.1 in /usr/local/lib/python3.6/dist-packages (from category_encoders==2.0.0) (0.5.1)\n",
+            "Requirement already satisfied: numpy>=1.11.3 in /usr/local/lib/python3.6/dist-packages (from category_encoders==2.0.0) (1.16.5)\n",
+            "Requirement already satisfied: statsmodels>=0.6.1 in /usr/local/lib/python3.6/dist-packages (from category_encoders==2.0.0) (0.10.1)\n",
+            "Requirement already satisfied: pandas>=0.21.1 in /usr/local/lib/python3.6/dist-packages (from category_encoders==2.0.0) (0.24.2)\n",
+            "Requirement already satisfied: joblib>=0.11 in /usr/local/lib/python3.6/dist-packages (from scikit-learn>=0.20.0->category_encoders==2.0.0) (0.13.2)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from patsy>=0.4.1->category_encoders==2.0.0) (1.12.0)\n",
+            "Requirement already satisfied: python-dateutil>=2.5.0 in /usr/local/lib/python3.6/dist-packages (from pandas>=0.21.1->category_encoders==2.0.0) (2.5.3)\n",
+            "Requirement already satisfied: pytz>=2011k in /usr/local/lib/python3.6/dist-packages (from pandas>=0.21.1->category_encoders==2.0.0) (2018.9)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "ZqnZfcZ6E0Ca",
         "colab_type": "code",
         "colab": {}
@@ -36,7 +72,24 @@
         "import numpy as np\n",
         "import math\n",
         "\n",
-        "from datetime import datetime"
+        "from datetime import datetime\n",
+        "\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "from sklearn.linear_model import LinearRegression\n",
+        "from sklearn.feature_selection import f_regression, SelectKBest\n",
+        "\n",
+        "import statsmodels.api as sm\n",
+        "\n",
+        "# import category_encoders as ce\n",
+        "# from sklearn.impute import SimpleImputer\n",
+        "# from sklearn.preprocessing import StandardScaler\n",
+        "# from sklearn.linear_model import LogisticRegressionCV\n",
+        "# from sklearn.ensemble import RandomForestClassifier\n",
+        "# from sklearn.pipeline import make_pipeline\n",
+        "# from sklearn.metrics import accuracy_score\n",
+        "# from sklearn.model_selection import train_test_split\n",
+        "# from sklearn.metrics import mean_absolute_error"
       ],
       "execution_count": 0,
       "outputs": []
@@ -50,7 +103,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 496
         },
-        "outputId": "098aa0db-d2b1-4d8e-c39c-a99537698b94"
+        "outputId": "1c881119-3130-476d-cb08-c9abce1f31bb"
       },
       "source": [
         "# Load SF real estate data - 10 years (2009-2018) of single family home sales in San Francisco downloaded from the SF MLS\n",
@@ -64,7 +117,7 @@
         "print(df.shape)\n",
         "df.head(5)"
       ],
-      "execution_count": 335,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
@@ -373,155 +426,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 335
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ynFcg7GtGczJ",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 697
-        },
-        "outputId": "7aa81544-6f1d-4847-c46e-c38b1b98fc86"
-      },
-      "source": [
-        "# Check for nulls\n",
-        "df.isnull().sum()"
-      ],
-      "execution_count": 336,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "longitude            469\n",
-              "latitude             469\n",
-              "elevation            469\n",
-              "full_address           0\n",
-              "city                   0\n",
-              "state                  0\n",
-              "street_no              0\n",
-              "street_name            0\n",
-              "street_suffix       1613\n",
-              "zip                    0\n",
-              "area                   0\n",
-              "district_no            0\n",
-              "district_desc          0\n",
-              "nid                    0\n",
-              "neighborhood           0\n",
-              "on_market_date         0\n",
-              "cdom                   0\n",
-              "orig_list_price        0\n",
-              "sale_date              0\n",
-              "sale_price             0\n",
-              "rooms                  0\n",
-              "baths                  0\n",
-              "beds                   0\n",
-              "sf_source              0\n",
-              "sf_source_decs         0\n",
-              "sf                     0\n",
-              "lot_acres          13379\n",
-              "lot_sf                 0\n",
-              "year_built             0\n",
-              "zoning             10880\n",
-              "lot_desc               0\n",
-              "drive_side             0\n",
-              "parking                0\n",
-              "park_leased            0\n",
-              "num_parking            0\n",
-              "shopping               0\n",
-              "transportation         0\n",
-              "type                   0\n",
-              "views                  0\n",
-              "dtype: int64"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 336
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "6PkY-9YzHt91",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 751
-        },
-        "outputId": "7fa58184-8c5a-42a6-90b1-9d95ee69e29d"
-      },
-      "source": [
-        "# Check for zeros\n",
-        "(df == '0').sum()"
-      ],
-      "execution_count": 337,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/pandas/core/ops.py:1649: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
-            "  result = method(y)\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "longitude              0\n",
-              "latitude               0\n",
-              "elevation              0\n",
-              "full_address           0\n",
-              "city                   0\n",
-              "state                  0\n",
-              "street_no              0\n",
-              "street_name            0\n",
-              "street_suffix          0\n",
-              "zip                    0\n",
-              "area                   0\n",
-              "district_no            0\n",
-              "district_desc          0\n",
-              "nid                    0\n",
-              "neighborhood           0\n",
-              "on_market_date         0\n",
-              "cdom                   0\n",
-              "orig_list_price        0\n",
-              "sale_date              0\n",
-              "sale_price             0\n",
-              "rooms                  0\n",
-              "baths                  0\n",
-              "beds                   0\n",
-              "sf_source              0\n",
-              "sf_source_decs         0\n",
-              "sf                     0\n",
-              "lot_acres              0\n",
-              "lot_sf                 0\n",
-              "year_built             0\n",
-              "zoning                 0\n",
-              "lot_desc           11198\n",
-              "drive_side         12825\n",
-              "parking             2483\n",
-              "park_leased        13222\n",
-              "num_parking            0\n",
-              "shopping           10597\n",
-              "transportation      8392\n",
-              "type                5686\n",
-              "views              10635\n",
-              "dtype: int64"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 337
+          "execution_count": 49
         }
       ]
     },
@@ -534,13 +439,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "df552ce4-e4a3-431c-90e0-522531e3ae95"
+        "outputId": "a2064b76-5427-4b2b-d722-8bd56144d5cd"
       },
       "source": [
         "# Baseline of sale_price\n",
         "df['sale_price'].mean()"
       ],
-      "execution_count": 338,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -552,7 +457,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 338
+          "execution_count": 50
         }
       ]
     },
@@ -565,7 +470,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 51
         },
-        "outputId": "9016086c-cc0d-4b92-98d1-651f6aeb864d"
+        "outputId": "005bf41b-c472-4145-bb36-f43b7e639780"
       },
       "source": [
         "# Train, test split on date of 01/01/2018\n",
@@ -579,14 +484,14 @@
         "df['month_on_market'] = df['on_market_date'].dt.month\n",
         "df['day_on_market'] = df['on_market_date'].dt.day\n",
         "\n",
-        "cutoff = pd.to_datetime('2018-01-01')\n",
-        "train = df[df['sale_date'] < cutoff]\n",
-        "test  = df[df['sale_date'] >= cutoff]\n",
-        "\n",
+        "low_cutoff = 2008\n",
+        "high_cutoff = 2018\n",
+        "train = df[(df['year_sold'] >= low_cutoff) & (df['year_sold'] < high_cutoff)]\n",
+        "test  = df[df['year_sold'] >= high_cutoff]\n",
         "print(train.shape)\n",
         "print(test.shape)"
       ],
-      "execution_count": 339,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "stream",
@@ -607,7 +512,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 904
         },
-        "outputId": "93c98cd8-2b8f-436a-e2d4-f4bbd8a2b0e5"
+        "outputId": "7089df3b-1fd1-4dea-bd81-5174ac362104"
       },
       "source": [
         "# Wrangle the data for train and test\n",
@@ -658,7 +563,7 @@
         "    X.loc[(X['sf'] == 0) & (X['beds'] == i), 'sf'] = averagesf_data.loc[i]\n",
         "\n",
         "  # Use 10,000sf for anything over 9 bedrooms\n",
-        "  X.loc[temp_data['sf'] == 0, 'sf'] = 10000\n",
+        "  X.loc[X['sf'] == 0, 'sf'] = 10000\n",
         "  X = X.astype({'sf': int})\n",
         "  \n",
         "  # Fill lot_sf zero values by using lot_acres to calc\n",
@@ -698,9 +603,9 @@
         "  # Engineer a price_sf column\n",
         "  X['price_sf'] = X['sale_price'] / X['sf']\n",
         "  \n",
-        "  # Drop date columns as they were converted to day, month, year columns\n",
-        "  X = X.drop(columns='sale_date')\n",
-        "  X = X.drop(columns='on_market_date')\n",
+        "  # Drop unneeded columns\n",
+        "  unneeded_columns = ['sale_date', 'on_market_date']\n",
+        "  X = X.drop(columns=unneeded_columns)\n",
         "  \n",
         "  return X\n",
         "\n",
@@ -709,7 +614,7 @@
         "\n",
         "train.head()"
       ],
-      "execution_count": 340,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
@@ -1066,9 +971,194 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 340
+          "execution_count": 52
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HqDPADa-CCGZ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "79b0702f-2949-4325-d725-bb0902d9456d"
+      },
+      "source": [
+        "# Train\n",
+        "cutoff = 2017\n",
+        "temp=train.copy()\n",
+        "train = temp[temp['year_sold'] < 2017]\n",
+        "val  = temp[temp['year_sold'] >= 2017]\n",
+        "print(train.shape, val.shape, test.shape)"
+      ],
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(19227, 44) (2260, 44) (2224, 44)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bbYMZ0cTnhCV",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 782
+        },
+        "outputId": "24b812ff-bb91-40e4-c515-796da489a4dc"
+      },
+      "source": [
+        "train.isnull().sum()"
+      ],
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "longitude              0\n",
+              "latitude               0\n",
+              "elevation              0\n",
+              "full_address           0\n",
+              "city                   0\n",
+              "state                  0\n",
+              "street_no              0\n",
+              "street_name            0\n",
+              "street_suffix       1510\n",
+              "zip                    0\n",
+              "area                   0\n",
+              "district_no            0\n",
+              "district_desc          0\n",
+              "nid                    0\n",
+              "neighborhood           0\n",
+              "cdom                   0\n",
+              "orig_list_price        0\n",
+              "sale_price             0\n",
+              "rooms                  0\n",
+              "baths                  0\n",
+              "beds                   0\n",
+              "sf_source              0\n",
+              "sf_source_decs         0\n",
+              "sf                     0\n",
+              "lot_acres          13069\n",
+              "lot_sf             13069\n",
+              "year_built          1152\n",
+              "zoning             10309\n",
+              "lot_desc            9022\n",
+              "drive_side         10469\n",
+              "parking             1997\n",
+              "park_leased        12974\n",
+              "num_parking            0\n",
+              "shopping            8466\n",
+              "transportation      6731\n",
+              "type                4480\n",
+              "views               8711\n",
+              "year_sold              0\n",
+              "month_sold             0\n",
+              "day_sold               0\n",
+              "year_on_market         0\n",
+              "month_on_market        0\n",
+              "day_on_market          0\n",
+              "price_sf               0\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 54
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kFxdeaqTEMzC",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 105
+        },
+        "outputId": "4ae1d186-94ca-4bea-d89c-b6d48749d603"
+      },
+      "source": [
+        "# Encode and fit a linear regression model\n",
+        "target = 'sale_price'\n",
+        "#features = train.select_dtypes('number').columns.drop(target).tolist()\n",
+        "features = ['longitude', 'latitude', 'elevation', 'area', 'district_no', 'nid', 'cdom', 'orig_list_price', \n",
+        "            'rooms', 'baths', 'beds', 'sf', 'num_parking', 'year_sold', 'month_sold', 'day_sold', \n",
+        "            'year_on_market', 'month_on_market', 'day_on_market', 'price_sf']\n",
+        "\n",
+        "#features = train.columns.drop(target)\n",
+        "X_train = train[features]\n",
+        "y_train = train[target]\n",
+        "X_val = val[features]\n",
+        "y_val = val[target]\n",
+        "X_test = test[features]\n",
+        "y_test = test[target]\n",
+        "\n",
+        "model = LinearRegression()\n",
+        "model.fit(X_train, y_train)\n",
+        "y_pred = model.predict(X_val)\n",
+        "mae = mean_absolute_error(y_val, y_pred)\n",
+        "\n",
+        "X1 = sm.add_constant(X_train)\n",
+        "result = sm.OLS(y_train, X1).fit()\n",
+        "\n",
+        "print(f'Test MAE: ${mae:.0f}')\n",
+        "print(result.rsquared, result.rsquared_adj)"
+      ],
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Test MAE: $211660\n",
+            "0.8878510319279134 0.887740091625244\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/numpy/core/fromnumeric.py:2389: FutureWarning: Method .ptp is deprecated and will be removed in a future version. Use numpy.ptp instead.\n",
+            "  return ptp(axis=axis, out=out, **kwargs)\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "atwcwF_FCsGe",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Create the logistic regression pipeline\n",
+        "# pipeline = make_pipeline (\n",
+        "#     #ce.OrdinalEncoder(),\n",
+        "#     SimpleImputer(strategy='mean'), \n",
+        "#     StandardScaler(),\n",
+        "#     LogisticRegressionCV(random_state=42, n_jobs=-1)\n",
+        "# )\n",
+        "\n",
+        "# pipeline.fit(X_train, y_train)\n",
+        "\n",
+        "# print('Validation Accuracy', pipeline.score(X_val, y_val))"
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
