--- a/Main.ipynb
+++ b/Main.ipynb
@@ -1192,9 +1192,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 258
+          "height": 275
         },
-        "outputId": "74d7a8ba-50eb-4d57-a065-e6cf6d9132a1"
+        "outputId": "d9f3c30f-f0d9-4a78-dea4-48904bcbc028"
       },
       "source": [
         "# Encode and fit a linear regression model\n",
@@ -1229,15 +1229,18 @@
         "\n",
         "print ('Validation Accuracy', pipeline.score(X_val, y_val))\n",
         "\n",
+        "print ('Test Accuracy', pipeline.score(X_test, y_test))\n",
+        "\n",
         "X_train.head()"
       ],
-      "execution_count": 201,
+      "execution_count": 206,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Test MAE: $213379\n",
-            "Validation Accuracy 0.8945824744250024\n"
+            "Validation Accuracy 0.8945824744250024\n",
+            "Test Accuracy 0.8111235105479564\n"
           ],
           "name": "stdout"
         },
@@ -1503,7 +1506,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 201
+          "execution_count": 206
         }
       ]
     }
