--- a/Jestimate1.ipynb
+++ b/Jestimate1.ipynb
@@ -28,7 +28,7 @@
       "metadata": {
         "id": "9oXi5disofZQ",
         "colab_type": "code",
-        "outputId": "5c1b1950-ca29-497a-b207-e59da5afa9e7",
+        "outputId": "10acb5b3-1267-4355-f860-ef2050d33ff0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -45,7 +45,7 @@
         "data = pd.read_csv('https://raw.githubusercontent.com/JimKing100/Jestimate/master/data/display_data.csv')\n",
         "data.head()"
       ],
-      "execution_count": 3,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -141,7 +141,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 13
         }
       ]
     },
@@ -158,19 +158,23 @@
         "columns = [TableColumn(field = \"full_address\", title = \"Address\")]\n",
         "\n",
         "data_table = DataTable(source = source, columns = columns, width = 280, height = 280, editable = False)\n",
-        "table_row = TextInput(value = '', title = \"Row index:\")\n",
-        "table_cell_column_1 = TextInput(value = '', title = \"Address\")\n",
+        "table_address = TextInput(value = '', title = \"Address\")\n",
+        "table_actual = TextInput(value = '', title = \"Actual Sale Price\")\n",
+        "table_predicted = TextInput(value = '', title = \"Predicted Sale Price\")\n",
+        "table_diff = TextInput(value = '', title = \"Difference\")\n",
         "\n",
         "def function_source(attr, old, new):\n",
         "    try:\n",
         "        selected_index = source.selected.indices[0]\n",
-        "        table_row.value = str(selected_index)\n",
-        "        table_cell_column_1.value = str(source.data[\"full_address\"][selected_index])\n",
+        "        table_address.value = str(source.data['full_address'][selected_index])\n",
+        "        table_actual.value = str(source.data['sale_price'][selected_index])\n",
+        "        table_predicted.value = str(source.data['prediction'][selected_index])\n",
+        "        table_diff.value = str(source.data['difference'][selected_index])\n",
         "    except IndexError:\n",
         "        pass\n",
         "\n",
         "source.selected.on_change('indices', function_source)\n",
-        "curdoc().add_root(column(data_table, table_row, table_cell_column_1))"
+        "curdoc().add_root(column(data_table, table_address, table_actual, table_predicted, table_diff))"
       ],
       "execution_count": 0,
       "outputs": []
