--- a/Jestimate1.ipynb
+++ b/Jestimate1.ipynb
@@ -28,7 +28,7 @@
       "metadata": {
         "id": "9oXi5disofZQ",
         "colab_type": "code",
-        "outputId": "10acb5b3-1267-4355-f860-ef2050d33ff0",
+        "outputId": "6e9b0714-87f8-4bf0-f8ac-f5e5f468711c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -45,7 +45,7 @@
         "data = pd.read_csv('https://raw.githubusercontent.com/JimKing100/Jestimate/master/data/display_data.csv')\n",
         "data.head()"
       ],
-      "execution_count": 13,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -141,7 +141,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 13
+          "execution_count": 22
         }
       ]
     },
@@ -167,9 +167,9 @@
         "    try:\n",
         "        selected_index = source.selected.indices[0]\n",
         "        table_address.value = str(source.data['full_address'][selected_index])\n",
-        "        table_actual.value = str(source.data['sale_price'][selected_index])\n",
-        "        table_predicted.value = str(source.data['prediction'][selected_index])\n",
-        "        table_diff.value = str(source.data['difference'][selected_index])\n",
+        "        table_actual.value = '${:,}'.format((source.data['sale_price'][selected_index]))\n",
+        "        table_predicted.value = '${:,}'.format((source.data['prediction'][selected_index]))\n",
+        "        table_diff.value = '${:,}'.format(source.data['difference'][selected_index])\n",
         "    except IndexError:\n",
         "        pass\n",
         "\n",
